[gd_scene format=3 uid="uid://cbejnnxorrsdf"]

[ext_resource type="Script" uid="uid://bbuafw2tvcu7v" path="res://Game Over Manager/ball_game_over_plane.gd" id="1_exltc"]
[ext_resource type="Script" uid="uid://d375kpn2lswvp" path="res://Game Over Manager/game_over_manager.gd" id="1_xdvwr"]
[ext_resource type="Script" uid="uid://ca71xekj18m8t" path="res://Game Over Manager/germ_game_over_plane.gd" id="2_b3nye"]
[ext_resource type="Theme" uid="uid://bg3hae0xognpj" path="res://Main Menu/main_theme.tres" id="2_mnf0k"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mnf0k"]
a = Vector2(-1590, 14)
b = Vector2(3056, -3)

[node name="GameOverManager" type="Node2D" unique_id=1552969452]
script = ExtResource("1_xdvwr")

[node name="BallGameOverPlane" type="Area2D" parent="." unique_id=1027130878]
unique_name_in_owner = true
script = ExtResource("1_exltc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallGameOverPlane" unique_id=1479355379]
position = Vector2(-11, 1281)
shape = SubResource("SegmentShape2D_mnf0k")

[node name="GermGameOverPlane" type="Area2D" parent="." unique_id=7314300]
unique_name_in_owner = true
script = ExtResource("2_b3nye")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GermGameOverPlane" unique_id=133130461]
position = Vector2(-19, 981)
shape = SubResource("SegmentShape2D_mnf0k")

[node name="GameOverMenu" type="Control" parent="." unique_id=1689571770]
unique_name_in_owner = true
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("2_mnf0k")

[node name="CenterContainer" type="CenterContainer" parent="GameOverMenu" unique_id=1649174069]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="PanelContainer" type="PanelContainer" parent="GameOverMenu/CenterContainer" unique_id=410301942]
custom_minimum_size = Vector2(600, 360)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/CenterContainer/PanelContainer" unique_id=1937757372]
layout_mode = 2

[node name="SpacingContainer" type="Container" parent="GameOverMenu/CenterContainer/PanelContainer/VBoxContainer" unique_id=1294356257]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="GameOverMenu/CenterContainer/PanelContainer/VBoxContainer" unique_id=241429978]
layout_mode = 2
bbcode_enabled = true
text = "[tornado radius=5.0 freq=3 connected=1]Game Over[/tornado]"
fit_content = true
horizontal_alignment = 1

[node name="SpacingContainer2" type="Container" parent="GameOverMenu/CenterContainer/PanelContainer/VBoxContainer" unique_id=225773186]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="ScoreLabel" type="RichTextLabel" parent="GameOverMenu/CenterContainer/PanelContainer/VBoxContainer" unique_id=197854195]
layout_mode = 2
bbcode_enabled = true
text = "Score: 9000"
fit_content = true
horizontal_alignment = 1

[node name="SpacingContainer4" type="Container" parent="GameOverMenu/CenterContainer/PanelContainer/VBoxContainer" unique_id=1696326600]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="RetryButton" type="Button" parent="GameOverMenu/CenterContainer/PanelContainer/VBoxContainer" unique_id=541139429]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Retry"

[node name="SpacingContainer3" type="Container" parent="GameOverMenu/CenterContainer/PanelContainer/VBoxContainer" unique_id=1015358517]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="GameOverMenu/CenterContainer/PanelContainer/VBoxContainer" unique_id=1205016195]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"
